--- a/app/app.component.scss
+++ b/app/app.component.scss
@@ -9,3 +9,8 @@
             height: 300px;
             width: 200px;
         }   
+        body{
+            background-image: url("https://www.keralatourism.org/photo-gallery/kerala-panorama");
+            height: 700px;
+            width: 100%;
+        }
